tests/meson-logs/meson-log.txt
Build started at 2024-10-26T18:19:29.239480
Main binary: /home/zenki/Documents/DIT/ai/miniconda3/bin/python
Build Options: 
Python system: Linux
The Meson build system
Version: 1.6.0
Source dir: /home/zenki/Documents/DIT/jj/projectJJ
Build dir: /home/zenki/Documents/DIT/jj/projectJJ/tests
Build type: native build
Project name: projectJJ
Project version: 1.0.0
-----------
Detecting compiler via: `c++ --version` -> 0
stdout:
c++ (Ubuntu 11.4.0-1ubuntu1~22.04) 11.4.0
Copyright (C) 2021 Free Software Foundation, Inc.
This is free software; see the source for copying conditions.  There is NO
warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
-----------
Running command: -cpp -x c++ -E -dM -
-----
-----------
Detecting linker via: `c++ -Wl,--version` -> 0
stdout:
GNU ld (GNU Binutils for Ubuntu) 2.38
Copyright (C) 2022 Free Software Foundation, Inc.
This program is free software; you may redistribute it under the terms of
the GNU General Public License version 3 or (at your option) a later version.
This program has absolutely no warranty.
-----------
stderr:
collect2 version 11.4.0
/usr/bin/ld -plugin /usr/lib/gcc/x86_64-linux-gnu/11/liblto_plugin.so -plugin-opt=/usr/lib/gcc/x86_64-linux-gnu/11/lto-wrapper -plugin-opt=-fresolution=/tmp/ccjQGGDx.res -plugin-opt=-pass-through=-lgcc_s -plugin-opt=-pass-through=-lgcc -plugin-opt=-pass-through=-lc -plugin-opt=-pass-through=-lgcc_s -plugin-opt=-pass-through=-lgcc --build-id --eh-frame-hdr -m elf_x86_64 --hash-style=gnu --as-needed -dynamic-linker /lib64/ld-linux-x86-64.so.2 -pie -z now -z relro /usr/lib/gcc/x86_64-linux-gnu/11/../../../x86_64-linux-gnu/Scrt1.o /usr/lib/gcc/x86_64-linux-gnu/11/../../../x86_64-linux-gnu/crti.o /usr/lib/gcc/x86_64-linux-gnu/11/crtbeginS.o -L/usr/lib/gcc/x86_64-linux-gnu/11 -L/usr/lib/gcc/x86_64-linux-gnu/11/../../../x86_64-linux-gnu -L/usr/lib/gcc/x86_64-linux-gnu/11/../../../../lib -L/lib/x86_64-linux-gnu -L/lib/../lib -L/usr/lib/x86_64-linux-gnu -L/usr/lib/../lib -L/usr/lib/gcc/x86_64-linux-gnu/11/../../.. --version -lstdc++ -lm -lgcc_s -lgcc -lc -lgcc_s -lgcc /usr/lib/gcc/x86_64-linux-gnu/11/crtendS.o /usr/lib/gcc/x86_64-linux-gnu/11/../../../x86_64-linux-gnu/crtn.o
-----------
Sanity testing C++ compiler: c++
Is cross compiler: False.
Sanity check compiler command line: c++ sanitycheckcpp.cc -o sanitycheckcpp.exe -D_FILE_OFFSET_BITS=64
Sanity check compile stdout:

-----
Sanity check compile stderr:

-----
Running test binary command:  /home/zenki/Documents/DIT/jj/projectJJ/tests/meson-private/sanitycheckcpp.exe
C++ compiler for the host machine: c++ (gcc 11.4.0 "c++ (Ubuntu 11.4.0-1ubuntu1~22.04) 11.4.0")
C++ linker for the host machine: c++ ld.bfd 2.38
-----------
Detecting archiver via: `gcc-ar --version` -> 0
stdout:
GNU ar (GNU Binutils for Ubuntu) 2.38
Copyright (C) 2022 Free Software Foundation, Inc.
This program is free software; you may redistribute it under the terms of
the GNU General Public License version 3 or (at your option) any later version.
This program has absolutely no warranty.
-----------
-----------
Detecting compiler via: `c++ --version` -> 0
stdout:
c++ (Ubuntu 11.4.0-1ubuntu1~22.04) 11.4.0
Copyright (C) 2021 Free Software Foundation, Inc.
This is free software; see the source for copying conditions.  There is NO
warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
-----------
Running command: -cpp -x c++ -E -dM -
-----
-----------
Detecting linker via: `c++ -Wl,--version` -> 0
stdout:
GNU ld (GNU Binutils for Ubuntu) 2.38
Copyright (C) 2022 Free Software Foundation, Inc.
This program is free software; you may redistribute it under the terms of
the GNU General Public License version 3 or (at your option) a later version.
This program has absolutely no warranty.
-----------
stderr:
collect2 version 11.4.0
/usr/bin/ld -plugin /usr/lib/gcc/x86_64-linux-gnu/11/liblto_plugin.so -plugin-opt=/usr/lib/gcc/x86_64-linux-gnu/11/lto-wrapper -plugin-opt=-fresolution=/tmp/ccUi5P9q.res -plugin-opt=-pass-through=-lgcc_s -plugin-opt=-pass-through=-lgcc -plugin-opt=-pass-through=-lc -plugin-opt=-pass-through=-lgcc_s -plugin-opt=-pass-through=-lgcc --build-id --eh-frame-hdr -m elf_x86_64 --hash-style=gnu --as-needed -dynamic-linker /lib64/ld-linux-x86-64.so.2 -pie -z now -z relro /usr/lib/gcc/x86_64-linux-gnu/11/../../../x86_64-linux-gnu/Scrt1.o /usr/lib/gcc/x86_64-linux-gnu/11/../../../x86_64-linux-gnu/crti.o /usr/lib/gcc/x86_64-linux-gnu/11/crtbeginS.o -L/usr/lib/gcc/x86_64-linux-gnu/11 -L/usr/lib/gcc/x86_64-linux-gnu/11/../../../x86_64-linux-gnu -L/usr/lib/gcc/x86_64-linux-gnu/11/../../../../lib -L/lib/x86_64-linux-gnu -L/lib/../lib -L/usr/lib/x86_64-linux-gnu -L/usr/lib/../lib -L/usr/lib/gcc/x86_64-linux-gnu/11/../../.. --version -lstdc++ -lm -lgcc_s -lgcc -lc -lgcc_s -lgcc /usr/lib/gcc/x86_64-linux-gnu/11/crtendS.o /usr/lib/gcc/x86_64-linux-gnu/11/../../../x86_64-linux-gnu/crtn.o
-----------
Sanity testing C++ compiler: c++
Is cross compiler: False.
Sanity check compiler command line: c++ sanitycheckcpp.cc -o sanitycheckcpp.exe -D_FILE_OFFSET_BITS=64
Sanity check compile stdout:

-----
Sanity check compile stderr:

-----
Running test binary command:  /home/zenki/Documents/DIT/jj/projectJJ/tests/meson-private/sanitycheckcpp.exe
C++ compiler for the build machine: c++ (gcc 11.4.0 "c++ (Ubuntu 11.4.0-1ubuntu1~22.04) 11.4.0")
C++ linker for the build machine: c++ ld.bfd 2.38
-----------
Detecting archiver via: `gcc-ar --version` -> 0
stdout:
GNU ar (GNU Binutils for Ubuntu) 2.38
Copyright (C) 2022 Free Software Foundation, Inc.
This program is free software; you may redistribute it under the terms of
the GNU General Public License version 3 or (at your option) any later version.
This program has absolutely no warranty.
-----------
Build machine cpu family: x86_64
Build machine cpu: x86_64
Host machine cpu family: x86_64
Host machine cpu: x86_64
Target machine cpu family: x86_64
Target machine cpu: x86_64
Adding test "unit_tests"
Build targets in project: 3

Found ninja-1.11.1.git.kitware.jobserver-1 at /home/zenki/Documents/DIT/ai/miniconda3/bin/ninja
Running compile:
Working directory:  /home/zenki/Documents/DIT/jj/projectJJ/tests/meson-private/tmptv32e_ib
Code:

        #ifdef __has_include
         #if !__has_include("version")
          #error "Header 'version' could not be found"
         #endif
        #else
         #include <version>
        #endif
-----------
Command line: `c++ /home/zenki/Documents/DIT/jj/projectJJ/tests/meson-private/tmptv32e_ib/testfile.cpp -E -P -D_FILE_OFFSET_BITS=64 -P -O0 -fpermissive` -> 0
Running compile:
Working directory:  /home/zenki/Documents/DIT/jj/projectJJ/tests/meson-private/tmpbcy4gaxd
Code:

        #include <version>
        int main(void) {
            /* If it's not defined as a macro, try to use as a symbol */
            #ifndef _LIBCPP_VERSION
                _LIBCPP_VERSION;
            #endif
            return 0;
        }
-----------
Command line: `c++ /home/zenki/Documents/DIT/jj/projectJJ/tests/meson-private/tmpbcy4gaxd/testfile.cpp -o /home/zenki/Documents/DIT/jj/projectJJ/tests/meson-private/tmpbcy4gaxd/output.obj -c -D_FILE_OFFSET_BITS=64 -O0 -fpermissive` -> 1
stderr:
/home/zenki/Documents/DIT/jj/projectJJ/tests/meson-private/tmpbcy4gaxd/testfile.cpp: In function 'int main()':
/home/zenki/Documents/DIT/jj/projectJJ/tests/meson-private/tmpbcy4gaxd/testfile.cpp:6:17: error: '_LIBCPP_VERSION' was not declared in this scope
    6 |                 _LIBCPP_VERSION;
      |                 ^~~~~~~~~~~~~~~
-----------
Running compile:
Working directory:  /home/zenki/Documents/DIT/jj/projectJJ/tests/meson-private/tmpemo78_eg
Code:

        #include <version>
        using _LIBCPP_VERSION;
        int main(void) { return 0; }
-----------
Command line: `c++ /home/zenki/Documents/DIT/jj/projectJJ/tests/meson-private/tmpemo78_eg/testfile.cpp -o /home/zenki/Documents/DIT/jj/projectJJ/tests/meson-private/tmpemo78_eg/output.obj -c -D_FILE_OFFSET_BITS=64 -O0 -fpermissive` -> 1
stderr:
/home/zenki/Documents/DIT/jj/projectJJ/tests/meson-private/tmpemo78_eg/testfile.cpp:3:15: error: expected nested-name-specifier before '_LIBCPP_VERSION'
    3 |         using _LIBCPP_VERSION;
      |               ^~~~~~~~~~~~~~~
-----------
Running compile:
Working directory:  /tmp/tmp34dfpg2v
Code:
int i = static_cast<int>(0);
-----------
Command line: `c++ /tmp/tmp34dfpg2v/testfile.cpp -o /tmp/tmp34dfpg2v/output.obj -D_FILE_OFFSET_BITS=64 -c -std=c++23` -> 0
Compiler accepts -std=c++23: YES
Using cached compile:
Cached command line:  c++ /home/zenki/Documents/DIT/jj/projectJJ/tests/meson-private/tmptv32e_ib/testfile.cpp -E -P -D_FILE_OFFSET_BITS=64 -P -O0 -fpermissive 

Code:
 
        #ifdef __has_include
         #if !__has_include("version")
          #error "Header 'version' could not be found"
         #endif
        #else
         #include <version>
        #endif
Cached compiler stdout:
 
Cached compiler stderr:
 
Using cached compile:
Cached command line:  c++ /home/zenki/Documents/DIT/jj/projectJJ/tests/meson-private/tmpbcy4gaxd/testfile.cpp -o /home/zenki/Documents/DIT/jj/projectJJ/tests/meson-private/tmpbcy4gaxd/output.obj -c -D_FILE_OFFSET_BITS=64 -O0 -fpermissive 

Code:
 
        #include <version>
        int main(void) {
            /* If it's not defined as a macro, try to use as a symbol */
            #ifndef _LIBCPP_VERSION
                _LIBCPP_VERSION;
            #endif
            return 0;
        }
Cached compiler stdout:
 
Cached compiler stderr:
 /home/zenki/Documents/DIT/jj/projectJJ/tests/meson-private/tmpbcy4gaxd/testfile.cpp: In function 'int main()':
/home/zenki/Documents/DIT/jj/projectJJ/tests/meson-private/tmpbcy4gaxd/testfile.cpp:6:17: error: '_LIBCPP_VERSION' was not declared in this scope
    6 |                 _LIBCPP_VERSION;
      |                 ^~~~~~~~~~~~~~~

Using cached compile:
Cached command line:  c++ /home/zenki/Documents/DIT/jj/projectJJ/tests/meson-private/tmpemo78_eg/testfile.cpp -o /home/zenki/Documents/DIT/jj/projectJJ/tests/meson-private/tmpemo78_eg/output.obj -c -D_FILE_OFFSET_BITS=64 -O0 -fpermissive 

Code:
 
        #include <version>
        using _LIBCPP_VERSION;
        int main(void) { return 0; }
Cached compiler stdout:
 
Cached compiler stderr:
 /home/zenki/Documents/DIT/jj/projectJJ/tests/meson-private/tmpemo78_eg/testfile.cpp:3:15: error: expected nested-name-specifier before '_LIBCPP_VERSION'
    3 |         using _LIBCPP_VERSION;
      |               ^~~~~~~~~~~~~~~

Using cached compile:
Cached command line:  c++ /home/zenki/Documents/DIT/jj/projectJJ/tests/meson-private/tmptv32e_ib/testfile.cpp -E -P -D_FILE_OFFSET_BITS=64 -P -O0 -fpermissive 

Code:
 
        #ifdef __has_include
         #if !__has_include("version")
          #error "Header 'version' could not be found"
         #endif
        #else
         #include <version>
        #endif
Cached compiler stdout:
 
Cached compiler stderr:
 
Using cached compile:
Cached command line:  c++ /home/zenki/Documents/DIT/jj/projectJJ/tests/meson-private/tmpbcy4gaxd/testfile.cpp -o /home/zenki/Documents/DIT/jj/projectJJ/tests/meson-private/tmpbcy4gaxd/output.obj -c -D_FILE_OFFSET_BITS=64 -O0 -fpermissive 

Code:
 
        #include <version>
        int main(void) {
            /* If it's not defined as a macro, try to use as a symbol */
            #ifndef _LIBCPP_VERSION
                _LIBCPP_VERSION;
            #endif
            return 0;
        }
Cached compiler stdout:
 
Cached compiler stderr:
 /home/zenki/Documents/DIT/jj/projectJJ/tests/meson-private/tmpbcy4gaxd/testfile.cpp: In function 'int main()':
/home/zenki/Documents/DIT/jj/projectJJ/tests/meson-private/tmpbcy4gaxd/testfile.cpp:6:17: error: '_LIBCPP_VERSION' was not declared in this scope
    6 |                 _LIBCPP_VERSION;
      |                 ^~~~~~~~~~~~~~~

Using cached compile:
Cached command line:  c++ /home/zenki/Documents/DIT/jj/projectJJ/tests/meson-private/tmpemo78_eg/testfile.cpp -o /home/zenki/Documents/DIT/jj/projectJJ/tests/meson-private/tmpemo78_eg/output.obj -c -D_FILE_OFFSET_BITS=64 -O0 -fpermissive 

Code:
 
        #include <version>
        using _LIBCPP_VERSION;
        int main(void) { return 0; }
Cached compiler stdout:
 
Cached compiler stderr:
 /home/zenki/Documents/DIT/jj/projectJJ/tests/meson-private/tmpemo78_eg/testfile.cpp:3:15: error: expected nested-name-specifier before '_LIBCPP_VERSION'
    3 |         using _LIBCPP_VERSION;
      |               ^~~~~~~~~~~~~~~

Running compile:
Working directory:  /home/zenki/Documents/DIT/jj/projectJJ/tests/meson-private/tmpbxtwe7t9
Code:

-----------
Command line: `c++ /home/zenki/Documents/DIT/jj/projectJJ/tests/meson-private/tmpbxtwe7t9/testfile.cpp -o /home/zenki/Documents/DIT/jj/projectJJ/tests/meson-private/tmpbxtwe7t9/output.obj -c -D_FILE_OFFSET_BITS=64 -O0 -fpermissive --print-search-dirs` -> 0
stdout:
install: /usr/lib/gcc/x86_64-linux-gnu/11/
programs: =/usr/lib/gcc/x86_64-linux-gnu/11/:/usr/lib/gcc/x86_64-linux-gnu/11/:/usr/lib/gcc/x86_64-linux-gnu/:/usr/lib/gcc/x86_64-linux-gnu/11/:/usr/lib/gcc/x86_64-linux-gnu/:/usr/lib/gcc/x86_64-linux-gnu/11/../../../../x86_64-linux-gnu/bin/x86_64-linux-gnu/11/:/usr/lib/gcc/x86_64-linux-gnu/11/../../../../x86_64-linux-gnu/bin/x86_64-linux-gnu/:/usr/lib/gcc/x86_64-linux-gnu/11/../../../../x86_64-linux-gnu/bin/
libraries: =/usr/lib/gcc/x86_64-linux-gnu/11/:/usr/lib/gcc/x86_64-linux-gnu/11/../../../../x86_64-linux-gnu/lib/x86_64-linux-gnu/11/:/usr/lib/gcc/x86_64-linux-gnu/11/../../../../x86_64-linux-gnu/lib/x86_64-linux-gnu/:/usr/lib/gcc/x86_64-linux-gnu/11/../../../../x86_64-linux-gnu/lib/../lib/:/usr/lib/gcc/x86_64-linux-gnu/11/../../../x86_64-linux-gnu/11/:/usr/lib/gcc/x86_64-linux-gnu/11/../../../x86_64-linux-gnu/:/usr/lib/gcc/x86_64-linux-gnu/11/../../../../lib/:/lib/x86_64-linux-gnu/11/:/lib/x86_64-linux-gnu/:/lib/../lib/:/usr/lib/x86_64-linux-gnu/11/:/usr/lib/x86_64-linux-gnu/:/usr/lib/../lib/:/usr/lib/gcc/x86_64-linux-gnu/11/../../../../x86_64-linux-gnu/lib/:/usr/lib/gcc/x86_64-linux-gnu/11/../../../:/lib/:/usr/lib/
-----------
Using cached compile:
Cached command line:  c++ /home/zenki/Documents/DIT/jj/projectJJ/tests/meson-private/tmptv32e_ib/testfile.cpp -E -P -D_FILE_OFFSET_BITS=64 -P -O0 -fpermissive 

Code:
 
        #ifdef __has_include
         #if !__has_include("version")
          #error "Header 'version' could not be found"
         #endif
        #else
         #include <version>
        #endif
Cached compiler stdout:
 
Cached compiler stderr:
 
Using cached compile:
Cached command line:  c++ /home/zenki/Documents/DIT/jj/projectJJ/tests/meson-private/tmpbcy4gaxd/testfile.cpp -o /home/zenki/Documents/DIT/jj/projectJJ/tests/meson-private/tmpbcy4gaxd/output.obj -c -D_FILE_OFFSET_BITS=64 -O0 -fpermissive 

Code:
 
        #include <version>
        int main(void) {
            /* If it's not defined as a macro, try to use as a symbol */
            #ifndef _LIBCPP_VERSION
                _LIBCPP_VERSION;
            #endif
            return 0;
        }
Cached compiler stdout:
 
Cached compiler stderr:
 /home/zenki/Documents/DIT/jj/projectJJ/tests/meson-private/tmpbcy4gaxd/testfile.cpp: In function 'int main()':
/home/zenki/Documents/DIT/jj/projectJJ/tests/meson-private/tmpbcy4gaxd/testfile.cpp:6:17: error: '_LIBCPP_VERSION' was not declared in this scope
    6 |                 _LIBCPP_VERSION;
      |                 ^~~~~~~~~~~~~~~

Using cached compile:
Cached command line:  c++ /home/zenki/Documents/DIT/jj/projectJJ/tests/meson-private/tmpemo78_eg/testfile.cpp -o /home/zenki/Documents/DIT/jj/projectJJ/tests/meson-private/tmpemo78_eg/output.obj -c -D_FILE_OFFSET_BITS=64 -O0 -fpermissive 

Code:
 
        #include <version>
        using _LIBCPP_VERSION;
        int main(void) { return 0; }
Cached compiler stdout:
 
Cached compiler stderr:
 /home/zenki/Documents/DIT/jj/projectJJ/tests/meson-private/tmpemo78_eg/testfile.cpp:3:15: error: expected nested-name-specifier before '_LIBCPP_VERSION'
    3 |         using _LIBCPP_VERSION;
      |               ^~~~~~~~~~~~~~~

Using cached compile:
Cached command line:  c++ /home/zenki/Documents/DIT/jj/projectJJ/tests/meson-private/tmptv32e_ib/testfile.cpp -E -P -D_FILE_OFFSET_BITS=64 -P -O0 -fpermissive 

Code:
 
        #ifdef __has_include
         #if !__has_include("version")
          #error "Header 'version' could not be found"
         #endif
        #else
         #include <version>
        #endif
Cached compiler stdout:
 
Cached compiler stderr:
 
Using cached compile:
Cached command line:  c++ /home/zenki/Documents/DIT/jj/projectJJ/tests/meson-private/tmpbcy4gaxd/testfile.cpp -o /home/zenki/Documents/DIT/jj/projectJJ/tests/meson-private/tmpbcy4gaxd/output.obj -c -D_FILE_OFFSET_BITS=64 -O0 -fpermissive 

Code:
 
        #include <version>
        int main(void) {
            /* If it's not defined as a macro, try to use as a symbol */
            #ifndef _LIBCPP_VERSION
                _LIBCPP_VERSION;
            #endif
            return 0;
        }
Cached compiler stdout:
 
Cached compiler stderr:
 /home/zenki/Documents/DIT/jj/projectJJ/tests/meson-private/tmpbcy4gaxd/testfile.cpp: In function 'int main()':
/home/zenki/Documents/DIT/jj/projectJJ/tests/meson-private/tmpbcy4gaxd/testfile.cpp:6:17: error: '_LIBCPP_VERSION' was not declared in this scope
    6 |                 _LIBCPP_VERSION;
      |                 ^~~~~~~~~~~~~~~

Using cached compile:
Cached command line:  c++ /home/zenki/Documents/DIT/jj/projectJJ/tests/meson-private/tmpemo78_eg/testfile.cpp -o /home/zenki/Documents/DIT/jj/projectJJ/tests/meson-private/tmpemo78_eg/output.obj -c -D_FILE_OFFSET_BITS=64 -O0 -fpermissive 

Code:
 
        #include <version>
        using _LIBCPP_VERSION;
        int main(void) { return 0; }
Cached compiler stdout:
 
Cached compiler stderr:
 /home/zenki/Documents/DIT/jj/projectJJ/tests/meson-private/tmpemo78_eg/testfile.cpp:3:15: error: expected nested-name-specifier before '_LIBCPP_VERSION'
    3 |         using _LIBCPP_VERSION;
      |               ^~~~~~~~~~~~~~~

Using cached compile:
Cached command line:  c++ /home/zenki/Documents/DIT/jj/projectJJ/tests/meson-private/tmptv32e_ib/testfile.cpp -E -P -D_FILE_OFFSET_BITS=64 -P -O0 -fpermissive 

Code:
 
        #ifdef __has_include
         #if !__has_include("version")
          #error "Header 'version' could not be found"
         #endif
        #else
         #include <version>
        #endif
Cached compiler stdout:
 
Cached compiler stderr:
 
Using cached compile:
Cached command line:  c++ /home/zenki/Documents/DIT/jj/projectJJ/tests/meson-private/tmpbcy4gaxd/testfile.cpp -o /home/zenki/Documents/DIT/jj/projectJJ/tests/meson-private/tmpbcy4gaxd/output.obj -c -D_FILE_OFFSET_BITS=64 -O0 -fpermissive 

Code:
 
        #include <version>
        int main(void) {
            /* If it's not defined as a macro, try to use as a symbol */
            #ifndef _LIBCPP_VERSION
                _LIBCPP_VERSION;
            #endif
            return 0;
        }
Cached compiler stdout:
 
Cached compiler stderr:
 /home/zenki/Documents/DIT/jj/projectJJ/tests/meson-private/tmpbcy4gaxd/testfile.cpp: In function 'int main()':
/home/zenki/Documents/DIT/jj/projectJJ/tests/meson-private/tmpbcy4gaxd/testfile.cpp:6:17: error: '_LIBCPP_VERSION' was not declared in this scope
    6 |                 _LIBCPP_VERSION;
      |                 ^~~~~~~~~~~~~~~

Using cached compile:
Cached command line:  c++ /home/zenki/Documents/DIT/jj/projectJJ/tests/meson-private/tmpemo78_eg/testfile.cpp -o /home/zenki/Documents/DIT/jj/projectJJ/tests/meson-private/tmpemo78_eg/output.obj -c -D_FILE_OFFSET_BITS=64 -O0 -fpermissive 

Code:
 
        #include <version>
        using _LIBCPP_VERSION;
        int main(void) { return 0; }
Cached compiler stdout:
 
Cached compiler stderr:
 /home/zenki/Documents/DIT/jj/projectJJ/tests/meson-private/tmpemo78_eg/testfile.cpp:3:15: error: expected nested-name-specifier before '_LIBCPP_VERSION'
    3 |         using _LIBCPP_VERSION;
      |               ^~~~~~~~~~~~~~~

Using cached compile:
Cached command line:  c++ /home/zenki/Documents/DIT/jj/projectJJ/tests/meson-private/tmptv32e_ib/testfile.cpp -E -P -D_FILE_OFFSET_BITS=64 -P -O0 -fpermissive 

Code:
 
        #ifdef __has_include
         #if !__has_include("version")
          #error "Header 'version' could not be found"
         #endif
        #else
         #include <version>
        #endif
Cached compiler stdout:
 
Cached compiler stderr:
 
Using cached compile:
Cached command line:  c++ /home/zenki/Documents/DIT/jj/projectJJ/tests/meson-private/tmpbcy4gaxd/testfile.cpp -o /home/zenki/Documents/DIT/jj/projectJJ/tests/meson-private/tmpbcy4gaxd/output.obj -c -D_FILE_OFFSET_BITS=64 -O0 -fpermissive 

Code:
 
        #include <version>
        int main(void) {
            /* If it's not defined as a macro, try to use as a symbol */
            #ifndef _LIBCPP_VERSION
                _LIBCPP_VERSION;
            #endif
            return 0;
        }
Cached compiler stdout:
 
Cached compiler stderr:
 /home/zenki/Documents/DIT/jj/projectJJ/tests/meson-private/tmpbcy4gaxd/testfile.cpp: In function 'int main()':
/home/zenki/Documents/DIT/jj/projectJJ/tests/meson-private/tmpbcy4gaxd/testfile.cpp:6:17: error: '_LIBCPP_VERSION' was not declared in this scope
    6 |                 _LIBCPP_VERSION;
      |                 ^~~~~~~~~~~~~~~

Using cached compile:
Cached command line:  c++ /home/zenki/Documents/DIT/jj/projectJJ/tests/meson-private/tmpemo78_eg/testfile.cpp -o /home/zenki/Documents/DIT/jj/projectJJ/tests/meson-private/tmpemo78_eg/output.obj -c -D_FILE_OFFSET_BITS=64 -O0 -fpermissive 

Code:
 
        #include <version>
        using _LIBCPP_VERSION;
        int main(void) { return 0; }
Cached compiler stdout:
 
Cached compiler stderr:
 /home/zenki/Documents/DIT/jj/projectJJ/tests/meson-private/tmpemo78_eg/testfile.cpp:3:15: error: expected nested-name-specifier before '_LIBCPP_VERSION'
    3 |         using _LIBCPP_VERSION;
      |               ^~~~~~~~~~~~~~~

WARNING: Running the setup command as `meson [options]` instead of `meson setup [options]` is ambiguous and deprecated.
